--- a/login.css
+++ b/login.css
@@ -1,5 +1,6 @@
 .login
 {
+    text-align: center;
     width : 100%;
     height : 90%;
     margin : 0;
@@ -7,6 +8,7 @@
 
 .login-id__form
 {
+    text-align: center;
     width : 40%;
     height : 15%;
     position : absolute;
@@ -16,6 +18,7 @@
 
 .login-pw__form
 {
+    text-align: center;
     width : 40%;
     height : 15%;
     position : absolute;
@@ -25,6 +28,7 @@
 
 .login-region__form
 {
+    text-align: center;
     width : 40%;
     height : 15%;
     position : absolute;
@@ -34,20 +38,25 @@
 
 .login-button__form1
 {  
+    color : white;
+    text-align: center;
+    vertical-align: middle;
     width : 18%;
-    height : 15%;
+    height : 8%;
     position : absolute;
     left : 31%;
     top : 80%;
-    background-color: rgb(87, 87, 145);
+    background-color: rgb(50, 50, 109);
 }
 
 .login-button__form2
 {
+    color : white;
+    text-align: center;
     width : 18%;
-    height : 15%;
+    height : 8%;
     position : absolute;
     left : 52%;
     top : 80%;
-    background-color: rgb(87, 87, 145);;
+    background-color: rgb(50, 50, 109);
 }
