--- a/main.css
+++ b/main.css
@@ -7,6 +7,8 @@
 
 .main-select
 {
+    text-align: center;
+    vertical-align: middle;
     width : 100%;
     height : 10%;
     font-weight: bold;
